error compilacion.txt
FQBN: arduino:avr:micro
Using board 'micro' from platform in folder: C:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\hardware\avr\1.8.6
Using core 'arduino' from platform in folder: C:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\hardware\avr\1.8.6

Detectando las librerías usadas...
C:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\tools\avr-gcc\7.3.0-atmel3.6.1-arduino7/bin/avr-g++ -c -g -Os -w -std=gnu++11 -fpermissive -fno-exceptions -ffunction-sections -fdata-sections -fno-threadsafe-statics -Wno-error=narrowing -flto -w -x c++ -E -CC -mmcu=atmega32u4 -DF_CPU=16000000L -DARDUINO=10607 -DARDUINO_AVR_MICRO -DARDUINO_ARCH_AVR -DUSB_VID=0x2020 -DUSB_PID=0x1020 -DUSB_MANUFACTURER="Tatxanka Hardware" -DUSB_PRODUCT="SP1 Tangible MIDI Control" -IC:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\hardware\avr\1.8.6\cores\arduino -IC:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\hardware\avr\1.8.6\variants\micro C:\Users\Tatxanka\AppData\Local\arduino\sketches\B8CD67F9957E88F06D1974D78728B147\sketch\FIRMWARE_SP1_Mk1_MICRO_ARDUINO.ino.cpp -o nul
Alternativas para MIDIUSB.h: [MIDIUSB@1.0.5]
ResolveLibrary(MIDIUSB.h)
  -> Candidatos: [MIDIUSB@1.0.5]
C:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\tools\avr-gcc\7.3.0-atmel3.6.1-arduino7/bin/avr-g++ -c -g -Os -w -std=gnu++11 -fpermissive -fno-exceptions -ffunction-sections -fdata-sections -fno-threadsafe-statics -Wno-error=narrowing -flto -w -x c++ -E -CC -mmcu=atmega32u4 -DF_CPU=16000000L -DARDUINO=10607 -DARDUINO_AVR_MICRO -DARDUINO_ARCH_AVR -DUSB_VID=0x2020 -DUSB_PID=0x1020 -DUSB_MANUFACTURER="Tatxanka Hardware" -DUSB_PRODUCT="SP1 Tangible MIDI Control" -IC:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\hardware\avr\1.8.6\cores\arduino -IC:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\hardware\avr\1.8.6\variants\micro -Ic:\Users\Tatxanka\Documents\Arduino\libraries\MIDIUSB\src C:\Users\Tatxanka\AppData\Local\arduino\sketches\B8CD67F9957E88F06D1974D78728B147\sketch\FIRMWARE_SP1_Mk1_MICRO_ARDUINO.ino.cpp -o nul
Using cached library dependencies for file: C:\Users\Tatxanka\AppData\Local\arduino\sketches\B8CD67F9957E88F06D1974D78728B147\sketch\hardware.cpp
C:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\tools\avr-gcc\7.3.0-atmel3.6.1-arduino7/bin/avr-g++ -c -g -Os -w -std=gnu++11 -fpermissive -fno-exceptions -ffunction-sections -fdata-sections -fno-threadsafe-statics -Wno-error=narrowing -flto -w -x c++ -E -CC -mmcu=atmega32u4 -DF_CPU=16000000L -DARDUINO=10607 -DARDUINO_AVR_MICRO -DARDUINO_ARCH_AVR -DUSB_VID=0x2020 -DUSB_PID=0x1020 -DUSB_MANUFACTURER="Tatxanka Hardware" -DUSB_PRODUCT="SP1 Tangible MIDI Control" -IC:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\hardware\avr\1.8.6\cores\arduino -IC:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\hardware\avr\1.8.6\variants\micro -Ic:\Users\Tatxanka\Documents\Arduino\libraries\MIDIUSB\src C:\Users\Tatxanka\AppData\Local\arduino\sketches\B8CD67F9957E88F06D1974D78728B147\sketch\midi.cpp -o nul
Alternativas para SoftwareSerial.h: [SoftwareSerial@1.0]
ResolveLibrary(SoftwareSerial.h)
  -> Candidatos: [SoftwareSerial@1.0]
C:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\tools\avr-gcc\7.3.0-atmel3.6.1-arduino7/bin/avr-g++ -c -g -Os -w -std=gnu++11 -fpermissive -fno-exceptions -ffunction-sections -fdata-sections -fno-threadsafe-statics -Wno-error=narrowing -flto -w -x c++ -E -CC -mmcu=atmega32u4 -DF_CPU=16000000L -DARDUINO=10607 -DARDUINO_AVR_MICRO -DARDUINO_ARCH_AVR -DUSB_VID=0x2020 -DUSB_PID=0x1020 -DUSB_MANUFACTURER="Tatxanka Hardware" -DUSB_PRODUCT="SP1 Tangible MIDI Control" -IC:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\hardware\avr\1.8.6\cores\arduino -IC:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\hardware\avr\1.8.6\variants\micro -Ic:\Users\Tatxanka\Documents\Arduino\libraries\MIDIUSB\src -IC:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\hardware\avr\1.8.6\libraries\SoftwareSerial\src C:\Users\Tatxanka\AppData\Local\arduino\sketches\B8CD67F9957E88F06D1974D78728B147\sketch\midi.cpp -o nul
Using cached library dependencies for file: C:\Users\Tatxanka\AppData\Local\arduino\sketches\B8CD67F9957E88F06D1974D78728B147\sketch\routing.cpp
Using cached library dependencies for file: c:\Users\Tatxanka\Documents\Arduino\libraries\MIDIUSB\src\MIDIUSB.cpp
Using cached library dependencies for file: C:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\hardware\avr\1.8.6\libraries\SoftwareSerial\src\SoftwareSerial.cpp
Generating function prototypes...
C:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\tools\avr-gcc\7.3.0-atmel3.6.1-arduino7/bin/avr-g++ -c -g -Os -w -std=gnu++11 -fpermissive -fno-exceptions -ffunction-sections -fdata-sections -fno-threadsafe-statics -Wno-error=narrowing -flto -w -x c++ -E -CC -mmcu=atmega32u4 -DF_CPU=16000000L -DARDUINO=10607 -DARDUINO_AVR_MICRO -DARDUINO_ARCH_AVR -DUSB_VID=0x2020 -DUSB_PID=0x1020 -DUSB_MANUFACTURER="Tatxanka Hardware" -DUSB_PRODUCT="SP1 Tangible MIDI Control" -IC:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\hardware\avr\1.8.6\cores\arduino -IC:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\hardware\avr\1.8.6\variants\micro -Ic:\Users\Tatxanka\Documents\Arduino\libraries\MIDIUSB\src -IC:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\hardware\avr\1.8.6\libraries\SoftwareSerial\src C:\Users\Tatxanka\AppData\Local\arduino\sketches\B8CD67F9957E88F06D1974D78728B147\sketch\FIRMWARE_SP1_Mk1_MICRO_ARDUINO.ino.cpp -o C:\Users\Tatxanka\AppData\Local\Temp\501809216\sketch_merged.cpp
C:\Users\Tatxanka\AppData\Local\Arduino15\packages\builtin\tools\ctags\5.8-arduino11/ctags -u --language-force=c++ -f - --c++-kinds=svpf --fields=KSTtzns --line-directives C:\Users\Tatxanka\AppData\Local\Temp\501809216\sketch_merged.cpp

Compilando el sketch...
"C:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\arduino\\tools\\avr-gcc\\7.3.0-atmel3.6.1-arduino7/bin/avr-g++" -c -g -Os -w -std=gnu++11 -fpermissive -fno-exceptions -ffunction-sections -fdata-sections -fno-threadsafe-statics -Wno-error=narrowing -MMD -flto -mmcu=atmega32u4 -DF_CPU=16000000L -DARDUINO=10607 -DARDUINO_AVR_MICRO -DARDUINO_ARCH_AVR -DUSB_VID=0x2020 -DUSB_PID=0x1020 "-DUSB_MANUFACTURER=\"Tatxanka Hardware\"" "-DUSB_PRODUCT=\"SP1 Tangible MIDI Control\"" "-IC:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\arduino\\hardware\\avr\\1.8.6\\cores\\arduino" "-IC:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\arduino\\hardware\\avr\\1.8.6\\variants\\micro" "-Ic:\\Users\\Tatxanka\\Documents\\Arduino\\libraries\\MIDIUSB\\src" "-IC:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\arduino\\hardware\\avr\\1.8.6\\libraries\\SoftwareSerial\\src" "C:\\Users\\Tatxanka\\AppData\\Local\\arduino\\sketches\\B8CD67F9957E88F06D1974D78728B147\\sketch\\FIRMWARE_SP1_Mk1_MICRO_ARDUINO.ino.cpp" -o "C:\\Users\\Tatxanka\\AppData\\Local\\arduino\\sketches\\B8CD67F9957E88F06D1974D78728B147\\sketch\\FIRMWARE_SP1_Mk1_MICRO_ARDUINO.ino.cpp.o"
"C:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\arduino\\tools\\avr-gcc\\7.3.0-atmel3.6.1-arduino7/bin/avr-g++" -c -g -Os -w -std=gnu++11 -fpermissive -fno-exceptions -ffunction-sections -fdata-sections -fno-threadsafe-statics -Wno-error=narrowing -MMD -flto -mmcu=atmega32u4 -DF_CPU=16000000L -DARDUINO=10607 -DARDUINO_AVR_MICRO -DARDUINO_ARCH_AVR -DUSB_VID=0x2020 -DUSB_PID=0x1020 "-DUSB_MANUFACTURER=\"Tatxanka Hardware\"" "-DUSB_PRODUCT=\"SP1 Tangible MIDI Control\"" "-IC:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\arduino\\hardware\\avr\\1.8.6\\cores\\arduino" "-IC:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\arduino\\hardware\\avr\\1.8.6\\variants\\micro" "-Ic:\\Users\\Tatxanka\\Documents\\Arduino\\libraries\\MIDIUSB\\src" "-IC:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\arduino\\hardware\\avr\\1.8.6\\libraries\\SoftwareSerial\\src" "C:\\Users\\Tatxanka\\AppData\\Local\\arduino\\sketches\\B8CD67F9957E88F06D1974D78728B147\\sketch\\midi.cpp" -o "C:\\Users\\Tatxanka\\AppData\\Local\\arduino\\sketches\\B8CD67F9957E88F06D1974D78728B147\\sketch\\midi.cpp.o"
Utilizando archivo previamente compilado: C:\Users\Tatxanka\AppData\Local\arduino\sketches\B8CD67F9957E88F06D1974D78728B147\sketch\routing.cpp.o
Utilizando archivo previamente compilado: C:\Users\Tatxanka\AppData\Local\arduino\sketches\B8CD67F9957E88F06D1974D78728B147\sketch\hardware.cpp.o
C:\Users\Tatxanka\Documents\Arduino\FIRMWARE_SP1_Mk1_MICRO_ARDUINO\midi.cpp: In function 'void parseUartCommand(const String&)':
C:\Users\Tatxanka\Documents\Arduino\FIRMWARE_SP1_Mk1_MICRO_ARDUINO\midi.cpp:35:27: error: cannot convert 'const String' to 'uint8_t {aka unsigned char}' for argument '1' to 'void processMIDIMessage(uint8_t, uint8_t, uint8_t)'
     processMIDIMessage(cmd);
                           ^
Usando librería MIDIUSB con versión 1.0.5 en la carpeta: C:\Users\Tatxanka\Documents\Arduino\libraries\MIDIUSB 
Usando librería SoftwareSerial con versión 1.0 en la carpeta: C:\Users\Tatxanka\AppData\Local\Arduino15\packages\arduino\hardware\avr\1.8.6\libraries\SoftwareSerial 
exit status 1

Compilation error: cannot convert 'const String' to 'uint8_t {aka unsigned char}' for argument '1' to 'void processMIDIMessage(uint8_t, uint8_t, uint8_t)'